# growth-stack

./: .gitignore  README.md  example_env_vars.py  pyproject.toml
.github/workflows/: ci.yml
application/: README.md  __init__.py  main.py
application/templates/: index.html
framework_hexagonal/: __init__.py
framework_hexagonal/adapters/: __init__.py
framework_hexagonal/adapters/outbound/: __init__.py  httpx_fetcher.py  openai_image.py  openai_text.py  playwright_screenshot.py  sqlalchemy_db.py  tavily_search.py
framework_hexagonal/core/: __init__.py  container.py
framework_hexagonal/core/domain/: __init__.py  models.py
framework_hexagonal/core/ports/: __init__.py  db_gateway.py  image_ai.py  screenshotter.py  text_ai.py  web_fetcher.py  web_search.py
framework_hexagonal/examples/: streaming_example.py
framework_hexagonal/examples/fastapi_app/: __init__.py  main.py
framework_hexagonal/tests/: conftest.py  test_container.py  test_ports.py
framework_hexagonal/utils/: __init__.py
framework_hexagonal/utils/streaming/: README.md  __init__.py  fastapi.py
glory/: README.md  __init__.py  main.py
glory/static/css/: main.css
glory/static/js/: app.js
glory/templates/: base.html  index.html
glory/templates/tools/: cro_optimizer.html  cro_results.html
