[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framework_hexagonal"
version = "0.1.0"
description = "A Python 3.12 hexagonal architecture framework"
readme = "README.md"
authors = [
    {name = "framework_hexagonal", email = "hexagonal@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
playwright = [
    "playwright>=1.30.0",
]
web = [
    "httpx>=0.25.0", 
    "beautifulsoup4>=4.12.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.18.0",
]
test = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
example = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
all = [
    "openai>=1.0.0",
    "playwright>=1.30.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.18.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["framework_hexagonal"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["framework_hexagonal/tests"]
python_files = "test_*.py"
asyncio_mode = "auto" 